ingress/ingress-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-k8s-ingress
spec:
  rules:
  - host: my.k8s.me
    http:
      paths:
      - path: /file
        backend:
          serviceName: file-server
          servicePort: 80 
      - path: /prom
        backend:
          serviceName: prom-all-in-one 
          servicePort: 9090 
      - path: /grafana
        backend:
          serviceName: prom-all-in-one 
          servicePort: 3000 
      - path: /hi
        backend:
          serviceName: nginx-ds 
          servicePort: 80 
  - host: my.harbor.me
    http:
      paths:
      - path: /
        backend:
          serviceName: harbor 
          servicePort: 80
