ingress/ingress-kube-system-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  namespace: kube-system 
spec:
  rules:
  - host: my.grafana.me
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: 80
